[package]
name = "tlru-cache"
version = "0.1.0"
edition = "2021"
authors = ["Philip Cummins <philhoughtoncummins@gmail.com>"]
description = "A time-aware LRU cache implementation in Rust"
license = "Apache-2.0"
repository = "https://github.com/philrhc/tlru-rs"
keywords = ["cache", "lru", "ttl", "time-aware", "async"]
categories = ["data-structures", "asynchronous"]
readme = "README.md"

[dependencies]
indexmap = "2"

[dev-dependencies]
mock_instant = "0.5.1"
